<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewArraySize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewArraySize"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewNumThreads"
        app:layout_constraintEnd_toStartOf="@+id/editTextSize"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNumThreads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numthreadsText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/textViewArraySize"
        app:layout_constraintTop_toBottomOf="@+id/textViewArraySize" />

    <EditText
        android:id="@+id/editTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/arraySizeHint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textViewArraySize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewArraySize"
        app:layout_constraintTop_toTopOf="@+id/textViewArraySize" />

    <EditText
        android:id="@+id/editTextNth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numThreadsHint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNumThreads"
        app:layout_constraintStart_toStartOf="@+id/editTextSize"
        app:layout_constraintTop_toTopOf="@+id/textViewNumThreads" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="153dp" />

    <CheckBox
        android:id="@+id/checkBoxPar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbPar"
        app:layout_constraintBottom_toTopOf="@+id/buttonComp"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxNative"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <CheckBox
        android:id="@+id/checkBoxNative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbNativeText"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxPar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/checkBoxPar"
        app:layout_constraintTop_toTopOf="@+id/checkBoxPar" />

    <TextView
        android:id="@+id/textViewTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/resultText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewResult"
        app:layout_constraintEnd_toStartOf="@+id/textViewResult"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewResult" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textViewTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.32999998" />

    <Button
        android:id="@+id/buttonComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BcompText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/buttonInit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPar" />

    <Button
        android:id="@+id/buttonInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BinitText"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/buttonComp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonComp"
        app:layout_constraintTop_toTopOf="@+id/buttonComp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="331dp" />

</android.support.constraint.ConstraintLayout>